[gd_scene load_steps=10 format=3 uid="uid://bwggrf7sbmkcv"]

[ext_resource type="Script" uid="uid://c1x4bdj4l1nrc" path="res://Scripts/PlayerCharacter/PlayerCharacterScript.gd" id="1_5dbx1"]
[ext_resource type="Script" uid="uid://duhfav8dwux3m" path="res://Scripts/PlayerCharacter/CameraScript.gd" id="2_x12n0"]
[ext_resource type="PackedScene" uid="uid://203h702ktwtl" path="res://view_model/view_model_camera.tscn" id="3_1fu0j"]

[sub_resource type="Curve" id="Curve_qvv7t"]
_limits = [0.0, 100.0, 0.0, 1.0]
_data = [Vector2(0.17623, 15.0074), 0.0, 0.0, 0, 0, Vector2(0.286885, 23.6999), 0.0, 0.0, 0, 0, Vector2(0.55123, 58.8168), 0.0, 0.0, 0, 0, Vector2(0.870902, 99.0076), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_lh00s"]
_limits = [0.0, 10.0, 0.0, 1.0]
_data = [Vector2(0.245902, 8.66031), 0.0, 0.0, 0, 0, Vector2(0.577869, 7.86641), 0.0, 0.0, 0, 0, Vector2(0.901639, 6.97328), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5yjma"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1gb5t"]
height = 1.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6bkys"]
albedo_color = Color(0.196078, 0.223529, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p2iaj"]

[node name="PlayerCharacter" type="CharacterBody3D" groups=["PlayerCharacter"]]
collision_layer = 2
floor_max_angle = 1.309
floor_snap_length = 0.0
platform_floor_layers = 4294901761
script = ExtResource("1_5dbx1")
desiredMoveSpeedCurve = SubResource("Curve_qvv7t")
maxSpeed = 80.0
walkSpeed = 11.0
runSpeed = 20.0
crouchSpeed = 7.0
slideSpeedAddon = 8.0
dashSpeed = 130.0
walkAcceleration = 10.0
runAcceleration = 8.0
crouchAcceleration = 6.0
walkDecceleration = 10.0
runDecceleration = 8.0
crouchDecceleration = 6.0
inAirMoveSpeedCurve = SubResource("Curve_lh00s")
hitGroundCooldown = 0.2
jumpHeight = 4.0
jumpTimeToPeak = 0.4
jumpTimeToFall = 0.35
jumpCooldown = 0.25
nbJumpsInAirAllowed = 1
slideTime = 1.0
timeBeforeCanSlideAgain = 0.5
maxSlopeAngle = 10.0

[node name="CameraHolder" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.540581, 0)
script = ExtResource("2_x12n0")
XAxisSensibility = 0.016
YAxisSensibility = 0.016
maxUpAngleView = -90.0
maxDownAngleView = 90.0
crouchCameraDepth = -0.2
crouchCameraLerpSpeed = 8.0
slideCameraDepth = -0.5
slideCameraLerpSpeed = 8.0
baseFOV = 90.0
crouchFOV = 75.0
runFOV = 100.0
slideFOV = 120.0
dashFOV = 150.0
fovChangeSpeed = 4.0
fovChangeSpeedWhenDash = 3.0
bobFrequency = 0.8
bobAmplitude = 0.06
camTiltRotationValue = 0.35
camTiltRotationSpeed = 2.2
shakeDuration = 0.35
shakeFade = 6.0
mouseInputSpeed = 2.0

[node name="Camera3D" type="Camera3D" parent="CameraHolder"]
cull_mask = 1048573
current = true
fov = 100.0
near = 0.01
far = 1000.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="CameraHolder/Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CameraHolder/Camera3D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="view_model_camera" parent="CameraHolder/Camera3D/SubViewportContainer/SubViewport" instance=ExtResource("3_1fu0j")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.74555, 2.98105, 0)
keep_aspect = 0
cull_mask = 2

[node name="standingHitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5yjma")

[node name="crouchingHitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)
shape = SubResource("CapsuleShape3D_1gb5t")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_6bkys")
mesh = SubResource("CapsuleMesh_p2iaj")

[node name="Raycasts" type="Node3D" parent="."]

[node name="CeilingCheck" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.758088, 0)
exclude_parent = false
target_position = Vector3(0, 4, 0)
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="FloorCheck" type="RayCast3D" parent="Raycasts"]
exclude_parent = false
target_position = Vector3(0, -4, 0)
collide_with_areas = true
debug_shape_custom_color = Color(0, 0, 0.956863, 1)
